# hydroplane

./: .buildinfo  .gitignore  Dockerfile  README.md  api.html  architecture.html  basic-config.yml  examples.html  genindex.html  index.html  objects.inv  processes.html  py-modindex.html  pyproject.toml  quickstart.html  runtimes.html  search.html  searchindex.js  secret_stores.html  secrets.html  settings.html  using-hydroplane.html
.github/workflows/: container-publish.yaml  sphinx.yml
_sources/: examples.rst.txt  index.rst.txt  processes.rst.txt  quickstart.rst.txt  runtimes.rst.txt  secrets.rst.txt  settings.rst.txt  using-hydroplane.rst.txt
_sources/runtimes/: docker.rst.txt  gke.rst.txt
_sources/secret_stores/: none.rst.txt
architecture/: k8s.html
docs/: api.rst  architecture.rst  conf.py  examples.rst  index.rst  processes.rst  quickstart.rst  runtimes.rst  secret_stores.rst  secrets.rst  settings.rst  using-hydroplane.rst
docs/architecture/: k8s.rst
docs/runtimes/: docker.rst  eks.rst  gke.rst
docs/secret_stores/: local.rst  none.rst
examples/: kind-config.yaml  kind-runtime.yml  nginx-advanced.json  nginx.json
examples/chat/: README.md  chat-client-alice.json  chat-client-bob.json  chat-server.json
hydroplane/: config.py  main.py
hydroplane/models/: aws.py  container_spec.py  process_info.py  process_spec.py  secret.py  value_types.py
hydroplane/runtimes/: docker.py  ecs.py  eks.py  factory.py  gke.py  kind.py  runtime.py
hydroplane/secret_stores/: factory.py  local.py  none.py  secret_store.py
hydroplane/utils/: aws.py  hpctl.py  (+3 more)
runtimes/: docker.html  eks.html  gke.html
secret_stores/: local.html  none.html
(+4 files in other folders)
