[tool.poetry]
name = "hydroplane"
version = "0.1.0"
description = ""
authors = ["Hydro Project <jmh@berkeley.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.82.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
cryptography = "^38.0.1"
docker = "^6.0.0"
python-dotenv = "^0.21.0"
boto3 = "^1.24.88"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
