[tool.poetry]
name = "hydroplane"
version = "0.1.0"
description = ""
authors = ["Hydro Project <jmh@berkeley.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.82.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
cryptography = "^38.0.1"
docker = "^6.0.0"
python-dotenv = "^0.21.0"
boto3 = "^1.24.88"
kubernetes = "^24.2.0"
awscli = "^1.25.92"
fastapi-utils = "^0.2.1"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"
sphinx = "^5.0.0"
autodoc_pydantic = "^1.0.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
